--- a/advanced-form/src/App.css
+++ b/advanced-form/src/App.css
@@ -1,3 +1,14 @@
+* {
+  font-size: 1.2rem;
+  padding: .4rem;
+  margin: 0 .6rem;
+}
+
+h1{
+  color: red;
+  font-size: 3rem;
+}
+
 .App {
   text-align: center;
 }
@@ -7,32 +18,27 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.errors {
+  color: red;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.card{
+  border: 1px solid;
+  padding: 10px;
+  box-shadow: 5px 10px;
+  margin: 2rem;
+}
+
+button {
+  background-color: white;
+  color: black;
+  border: 2px solid #555555;
+  margin-top: .5rem;
+}
+
+button:hover {
+  background-color: #555555;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
